--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-laag": "^2.0.5",
     "react-redux": "^8.0.5",
     "react-tooltip": "^5.11.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "serve": "^14.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
