--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^8.0.5",
     "react-tooltip": "^5.11.1",
     "redux-thunk": "^2.4.2",
-    "serve": "^14.2.0"
+    "serve": "^14.2.0",
+    "use-error-boundary": "^2.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
